# smartmed

./: .env.example  .gitignore  README.md  pyproject.toml
firmware/arduino/smartmed_arduino/: smartmed_arduino.ino
legacy/: __init__.py  gui.py  smartmed_plan.json
logs/: keyboard_debug.txt
scripts/: install_autostart.sh  run_pi.sh  run_pi_resilient.sh  smartmed-autostart.desktop  test_arduino_serial.py
src/smartmed/: app.py  config.py  debug_file.py  main.py
src/smartmed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smartmed/hardware/: __init__.py  mock_transport.py  protocol.py  serial_transport.py  slot_config.py
src/smartmed/models/: __init__.py  defaults.py
src/smartmed/services/: __init__.py  admin_pin_service.py  alarm_settings_app_service.py  alarm_settings_service.py  alarm_workflow_service.py  app_persistence_service.py  backup_service.py  dispense_service.py  event_log_service.py  hardware_test_workflow_service.py  intake_workflow_service.py  notification_service.py  patient_profile_service.py  plan_service.py  (+6 more)
tests/: test_admin_pin_service.py  test_alarm_settings_app_service.py  test_app_persistence_service.py  test_backup_service.py  test_dispense_service.py  test_event_log_service.py  test_hardware_test_workflow_service.py  test_intake_workflow_service.py  test_mock_transport.py  test_notification_service.py  test_plan_service.py  test_runtime_state_service.py  test_schedule_service.py  test_security_service.py  test_serial_transport.py  test_storage_service.py  test_user_account_service.py  test_user_state_service.py
(+20 files in other folders)
