[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartmed"
version = "0.1.0"
description = "SmartMediSpender Raspberry Pi GUI"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "kivy==2.3.1",
    "requests==2.33.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
